[package]
name = "cedar"
version = "0.1.1"
authors = ["Tom Schroeder <j.tom.schroeder@gmail.com>"]
description = "Reactive, functional library for creating GUI applications"

documentation = "https://docs.rs/crate/cedar"
homepage = "https://github.com/jtomschroeder/cedar"
repository = "https://github.com/jtomschroeder/cedar"

readme = "README.md"
license = "MIT"
keywords = ["frp", "gui"]

[dependencies]
crossbeam = "0.2.10"

[target.'cfg(target_os = "linux")'.dependencies]
gtk = "0.4.1"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.9"
objc = "0.2"
core-graphics = "0.9"
gtk = { version = "0.4.1", optional = true }
