[package]
name = "cedar"
version = "0.1.1"
authors = ["Tom Schroeder <j.tom.schroeder@gmail.com>"]
description = "Reactive, functional library for creating UI applications"
edition = "2018"

documentation = "https://docs.rs/crate/cedar"
homepage = "https://github.com/jtomschroeder/cedar"
repository = "https://github.com/jtomschroeder/cedar"

readme = "README.md"
license = "MIT"
keywords = ["frp", "ui"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

web-view = "0.4"
sass-rs = "0.2"
